--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,3 +81,9 @@
     background-size: 40px 40px;
   }
 }
+
+@keyframes gradient-animation {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
