why not moving?

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,10 +85,10 @@
 @layer utilities {
   @keyframes marquee {
     from {
-      text-offset: 0%;
+      startOffset: 0%;
     }
     to {
-      text-offset: 100%;
+      startOffset: 100%;
     }
   }
 }
