--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,4 +80,7 @@
     background-image: linear-gradient(white 1px, transparent 1px), linear-gradient(to right, white 1px, transparent 1px);
     background-size: 40px 40px;
   }
+  .highlighted {
+    @apply text-primary;
+  }
 }
